tests/__snapshots__/api-toMatch-stderr.snap.txt
Error: Type '{ b: number; }' is not a subtype of type '{ a: string; b?: number | undefined; }'.

  49 |     expect<{ a: string; b?: number }>().type.toMatch<{ b?: number }>();
  50 | 
> 51 |     expect<{ a: string; b?: number }>().type.toMatch<{ b: number }>();
     |                                              ^
  52 |   });
  53 | 
  54 |   test("does NOT match expected type", () => {

       at ./__typetests__/toMatch.tst.ts:51:46 ❭ received type ❭ matches expected type

Error: Type '{ a: string; b?: number | undefined; }' is not a subtype of type '{ a: string; }'.

  58 |     expect<{ a: string }>().type.not.toMatch<{ a: string; b?: number }>();
  59 | 
> 60 |     expect<{ a: string }>().type.toMatch<{ a: string; b?: number }>();
     |                                  ^
  61 |   });
  62 | 
  63 |   test("matches expected value", () => {

       at ./__typetests__/toMatch.tst.ts:60:34 ❭ received type ❭ does NOT match expected type

Error: Type 'Names' is not a subtype of type '{ first: string; }'.

  65 |     expect<{ first: string; last?: string }>().type.toMatch(getNames());
  66 | 
> 67 |     expect<{ first: string }>().type.toMatch(getNames());
     |                                      ^
  68 |   });
  69 | 
  70 |   test("does NOT match expected value", () => {

       at ./__typetests__/toMatch.tst.ts:67:38 ❭ received type ❭ matches expected value

Error: Type 'Names' is not a subtype of type '{ first?: string | undefined; }'.

  71 |     expect<{ first?: string }>().type.not.toMatch(getNames());
  72 | 
> 73 |     expect<{ first?: string }>().type.toMatch(getNames());
     |                                       ^
  74 |   });
  75 | });
  76 | 

       at ./__typetests__/toMatch.tst.ts:73:39 ❭ received type ❭ does NOT match expected value

Error: Type '{ last: string; }' is not a subtype of type 'Names'.

  84 |     expect(getNames()).type.toMatch<{ last?: string }>();
  85 | 
> 86 |     expect(getNames()).type.toMatch<{ last: string }>();
     |                             ^
  87 |   });
  88 | 
  89 |   test("does NOT match expected type", () => {

       at ./__typetests__/toMatch.tst.ts:86:29 ❭ received value ❭ matches expected type

Error: Type '{ last: string; }' is not a subtype of type 'Names'.

  91 | 
  92 |     expect(getNames()).type.not.toMatch<{ last: string }>();
> 93 |     expect(getNames()).type.toMatch<{ last: string }>();
     |                             ^
  94 |   });
  95 | 
  96 |   test("matches expected value", () => {

       at ./__typetests__/toMatch.tst.ts:93:29 ❭ received value ❭ does NOT match expected type

Error: Type 'Names' is not a subtype of type '{ last: string; }'.

  100 |     expect({ first: "One", last: "Two" }).type.toMatch(getNames());
  101 | 
> 102 |     expect({ last: "Two" }).type.toMatch(getNames());
      |                                  ^
  103 |   });
  104 | 
  105 |   test("does NOT match expected value", () => {

        at ./__typetests__/toMatch.tst.ts:102:34 ❭ received value ❭ matches expected value

Error: Type 'Names' is a subtype of type '{ first: string; }'.

  106 |     expect({ last: "Two" }).type.not.toMatch(getNames());
  107 | 
> 108 |     expect({ first: "One" }).type.not.toMatch(getNames());
      |                                       ^
  109 |   });
  110 | });
  111 | 

        at ./__typetests__/toMatch.tst.ts:108:39 ❭ received value ❭ does NOT match expected value

